# tools

deploy/: README.md  deploy.py
deploy/scripts/: install_cpputest.sh
device_emulator/: README.md
device_emulator/src/: CMakeLists.txt  config.cpp  config.hpp  demu.cpp  environment.cpp  environment.hpp  types.hpp
device_emulator/src/configs/: basic.toml
device_emulator/src/controllers/: fire_extinguisher.hpp
device_emulator/src/interfaces/: controller_if.hpp  sensor_if.hpp
device_emulator/src/sensors/: air_pressure.hpp  flame.hpp  humidity.hpp  light.hpp  motion.hpp  temperature.hpp
stream_receiver/: README.md
stream_receiver/src/: CMakeLists.txt  main.cpp
stream_receiver/src/configs/: basic.toml
